# ConfTainter

./: README.md
ApplicabilityExperiment_5_3_1/: CMakeLists.txt  README.md  TInfer_ControlDeps.cpp  TInfer_ValueRel.cpp
ApplicabilityExperiment_5_3_2/: CMakeLists.txt  README.md  TCub.cpp  evaluation-KnownBug.csv  evaluation-UnknownBug.csv
ApplicabilityExperiment_5_3_2/Instrumentation/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.h
ApplicabilityExperiment_5_3_2/Tester/: ChangeTestUtil.py  ConfSpecList.txt  ConfigSampler.py  GetTestSuit.py  TestExcutor.py  TestMutater.py  TestResultChecker.py  TestVC.py  UpdateConfile.py  option_list_example.json
ApplicabilityExperiment_5_3_3/: CMakeLists.txt  README.md  TFuzz.cpp  bug_details.xlsx
src/: CMakeLists.txt  TestMain.cpp  tainter.cpp  tainter.h
src/test/demo/: test.cpp
